--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "gvwebsite",
   "version": "0.1.0",
   "private": true,
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
+    "@react-three/drei": "^4.3.3",
+    "@react-three/fiber": "^6.1.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "three": "^0.128.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
