--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "lodash.shuffle": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
+    "react-use-measure": "^2.0.4",
     "three": "^0.128.0",
     "web-vitals": "^1.1.2"
   },
